samples/_failures_safe/1761424269_f9e0fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d10d880.c: In function ‘main’:
./samples/SAFE/__tmp_0d10d880.c:159:20: error: missing terminating " character
  159 |             printf("[0xFF
      |                    ^~~~~~
./samples/SAFE/__tmp_0d10d880.c:159:13: error: expected expression at end of input
  159 |             printf("[0xFF
      |             ^~~~~~
./samples/SAFE/__tmp_0d10d880.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d10d880.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d10d880.c:159:13: error: expected declaration or statement at end of input
